--- a/source/sass/blocks/small-city-benefits.scss
+++ b/source/sass/blocks/small-city-benefits.scss
@@ -1,5 +1,5 @@
 .small-city-benefits {
-  padding: 36px 0 8px 0;
+  padding: 35px $section-side-padding 9px $section-side-padding;
 }
 
 .small-city-benefits__list {
@@ -9,7 +9,7 @@
 }
 
 .small-city-benefits__item {
-  padding: 0 $section-side-padding 15px 69px;
+  padding: 0 0 15px 49px;
 }
 
 .small-city-benefits__item-title {
