--- a/source/sass/blocks/social-links.scss
+++ b/source/sass/blocks/social-links.scss
@@ -1,11 +1,12 @@
 .social-links {
   @include reset-list;
+  font-size: 0;
 }
 
 .social-links__item {
   width: 46px;
   height: 48px;
   display: inline-block;
-  font-size: 0;
   background-color: $light-grey-blue;
+  margin-right: 6px;
 }
