--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -8,3 +8,5 @@ $gray: #e5e5e5;
 
 // == РАЗМЕРЫ ==
 $section-side-padding: 20px;
+$section-side-padding--tablet: 60px;
+$section-side-padding--desktop: 120px;
