--- a/source/sass/blocks/checkbox-input.scss
+++ b/source/sass/blocks/checkbox-input.scss
@@ -1,31 +1,36 @@
 .checkbox-input {
   height: 56px;
-  margin-top: 24px;
   position: relative;
-
-  &::before {
-    content: "";
-    display: inline-block;
-    vertical-align: middle;
-    width: 56px;
-    height: 56px;
-    background-color: #f2f2f2;
-    border-radius: 5px;
-  }
+  display: flex;
+  align-items: center;
 
   input {
     display: none;
   }
 
   label {
+    display: inline-block;
     vertical-align: middle;
-    margin-bottom: 6px;
-    margin-left: 18px;
+    margin-bottom: 4px;
+    margin-left: 78px;
     text-transform: none;
     font-size: 18px;
     font-weight: bold;
     line-height: 1.44;
     letter-spacing: normal;
+
+    &::before {
+      content: "";
+      position: absolute;
+      display: inline-block;
+      vertical-align: middle;
+      width: 56px;
+      height: 56px;
+      left: 0;
+      top: 0;
+      background-color: #f2f2f2;
+      border-radius: 5px;
+    }
   }
 
   input:checked + label::after {
