--- a/source/sass/blocks/gallery.scss
+++ b/source/sass/blocks/gallery.scss
@@ -1,5 +1,5 @@
 .gallery {
-  padding-top: 26px;
+  padding-top: 25px;
   border-bottom: solid 1px #e5e5e5;
 }
 
@@ -21,8 +21,8 @@
   color: $black;
   padding-left: $section-side-padding;
   padding-right: $section-side-padding;
-  margin-top: 26px;
-  margin-bottom: 28px;
+  margin-top: 27px;
+  margin-bottom: 27px;
 }
 
 .gallery__list {
@@ -33,4 +33,69 @@
   padding-left: $section-side-padding;
   padding-right: $section-side-padding;
   border-top: solid 1px #e5e5e5;
+  box-sizing: border-box;
+}
+
+
+@media (min-width: 768px) {
+  .gallery {
+    padding-top: 53px;
+  }
+
+  .gallery__title {
+    font-size: 30px;
+    line-height: 1;
+  }
+
+  .gallery__desc {
+    font-size: 14px;
+    line-height: 24px;
+    max-width: 440px;
+    margin: 28px auto 69px;
+  }
+
+  .gallery__list {
+    display: flex;
+    flex-wrap: wrap;
+    padding-left: 60px;
+    padding-right: 60px;
+  }
+
+  .gallery__item {
+    width: 50%;
+    background-color: #f2f2f2;
+    padding: 0;
+    border: none;
+
+    &:nth-child(2n+3) {
+      background-color: #eaeaea;
+    }
+
+    &:first-of-type {
+      width: 100%;
+    }
+  }
+}
+
+@media (min-width: 1200px) {
+  .gallery {
+    padding-top: 90px;
+  }
+
+  .gallery__desc {
+    margin-bottom: 72px;
+  }
+
+  .gallery__list {
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  .gallery__item {
+    width: 33.3%;
+
+    &:first-of-type {
+      width: 100%;
+    }
+  }
 }
