--- a/source/sass/blocks/index-page-intro.scss
+++ b/source/sass/blocks/index-page-intro.scss
@@ -1,5 +1,8 @@
 .index-page-intro {
-  padding: 43px $section-side-padding 27px $section-side-padding;
+  @include default-side-padding;
+
+  padding-top: 40px;
+  padding-bottom: 27px;
   text-align: center;
 }
 
@@ -19,8 +22,23 @@
   margin-bottom: 0;
 }
 
-.promo-video__player {
-  background-color: gray;
-  height: 267px;
-  margin-top: 35px;
+@media (min-width: 768px) {
+  .index-page-intro {
+    padding-top: 49px;
+    padding-bottom: 50px;
+  }
+
+  .index-page-intro__title {
+    font-size: 21px;
+    line-height: 26px;
+    max-width: 450px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .index-page-intro__desc {
+    font-size: 14px;
+    line-height: 1.86;
+    margin-top: 30px;
+  }
 }
