--- a/source/sass/blocks/post.scss
+++ b/source/sass/blocks/post.scss
@@ -1,7 +1,23 @@
 .post {
   margin: 0;
   padding-top: 22px;
-  padding-bottom: 25px;
+  padding-bottom: 16px;
+}
+
+.post__img-wrapper {
+  background-color: red; // TODO tmp
+  position: relative;
+  overflow: hidden;
+  height: 267px;
+}
+
+.post__img {
+  position: absolute;
+}
+
+.post__footer {
+  padding-top: 28px;
+  box-sizing: border-box;
 }
 
 .post__title {
@@ -9,7 +25,7 @@
   font-weight: bold;
   line-height: 1.71;
   color: $black-two;
-  margin-bottom: 1px;
+  margin: 0;
 }
 
 .post__author {
@@ -17,4 +33,65 @@
   text-transform: none;
   line-height: 1.71;
   color: $black;
+}
+
+.post__likes {
+  margin-top: 10px;
+}
+
+@media (min-width: 768px) {
+  .post {
+    padding: 0;
+  }
+
+  .post__img-wrapper {
+    background-color: red; // TODO tmp
+    position: relative;
+    overflow: hidden;
+    height: 267px;
+  }
+
+  .post--big .post__img-wrapper {
+    height: 400px;
+  }
+
+  .post__footer {
+    height: 80px;
+    flex-grow: 0;
+    flex-shrink: 0;
+    padding: 15px 20px 10px 20px;
+    position: relative;
+  }
+
+  .post__likes {
+    position: absolute;
+    right: 20px;
+    top: 20px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .post {
+    position: relative;
+  }
+
+  .post__footer {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background-color: rgba(0, 0, 0, 0.3);
+  }
+
+  .post__title {
+    color: white;
+  }
+
+  .post__author {
+    color: white;
+  }
+
+  .post__likes {
+    color: white;
+  }
 }
