--- a/source/sass/blocks/promo-video.scss
+++ b/source/sass/blocks/promo-video.scss
@@ -1,6 +1,6 @@
 .promo-video {
   text-align: center;
-  padding-top: 31px;
+  padding-top: 33px;
   padding-bottom: 44px;
 }
 
@@ -22,4 +22,48 @@
   font-size: 14px;
   line-height: 24px;
   color: $black;
+}
+
+.promo-video__player {
+  background-color: gray; // TODO tmp
+  height: 267px;
+  margin-top: 35px;
+}
+
+@media (min-width: 768px) {
+  .promo-video {
+    padding-top: 65px;
+  }
+
+  .promo-video__title {
+    font-size: 30px;
+    line-height: 1;
+  }
+
+  .promo-video__text {
+    max-width: 440px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .promo-video__player {
+    margin-top: 75px;
+    margin-left: 60px;
+    margin-right: 60px;
+    height: 500px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .promo-video {
+    padding-bottom: 90px;
+  }
+
+  .promo-video__text {
+    margin-top: 30px;
+  }
+
+  .promo-video__player {
+    margin-top: 72px;
+  }
 }
