--- a/source/sass/global.scss
+++ b/source/sass/global.scss
@@ -4,3 +4,32 @@ body {
   // почти весь текст на сайте отображается как "uppercase"
   text-transform: uppercase;
 }
+
+
+.container {
+  min-width: 320px;
+  max-width: 450px;
+  margin: 0 auto;
+}
+
+@media (min-width: 768px) {
+  .container {
+    width: 768px;
+    max-width: unset;
+    margin: 0 auto;
+  }
+}
+
+@media (min-width: 1200px) {
+  .container {
+    width: 1200px;
+    max-width: unset;
+    margin: 0 auto;
+  }
+}
+
+@media (max-width: 767px) {
+  .mobile-hidden {
+    display: none;
+  }
+}
