--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -5,6 +5,8 @@
 @import "./global";
 // БЭМ Блоки
 @import "./blocks/advantage";
+@import "./blocks/advantage-with-photo";
+@import "./blocks/advantage-list";
 @import "./blocks/button";
 @import "./blocks/feedback-form";
 @import "./blocks/find-apartment-suggestion";
@@ -23,5 +25,7 @@
 @import "./blocks/social-links";
 @import "./blocks/text-input";
 @import "./blocks/radio-input";
+@import "./blocks/radio-input-list";
 @import "./blocks/checkbox-input";
+@import "./blocks/checkbox-input-list";
 @import "./blocks/visually-hidden";
