--- a/source/sass/blocks/site-banner-big.scss
+++ b/source/sass/blocks/site-banner-big.scss
@@ -1,6 +1,6 @@
 .site-banner-big {
   height: 389px;
-  background-image: url("../../img/bg-back-mobile@1x.jpg");
+  background-image: url("../img/bg-back-mobile@1x.jpg");
   overflow: hidden;
 }
 
