--- a/source/sass/blocks/feedback-form.scss
+++ b/source/sass/blocks/feedback-form.scss
@@ -21,7 +21,11 @@
 }
 
 .feedback-form__fieldset--rating {
-  padding-bottom: 30px;
+  padding-bottom: 28px;
+
+  .feedback-form__fieldset-title {
+    padding-bottom: 10px;
+  }
 }
 
 .feedback-form__fieldset--places {
@@ -39,19 +43,12 @@
 }
 
 .feedback-form__fieldset-title {
-  float: left; // костыль для отображения legend внутри fieldset
-  padding-bottom: 23px;
-  width: 100%;
-
+  padding-bottom: 3px;
   font-weight: bold;
   font-size: 18px;
   line-height: 26px;
   text-align: center;
   color: $black-two;
-
-  + * { // костыль для отображения legend внутри fieldset
-    clear: left;
-  }
 }
 
 .feedback-form__review {
@@ -101,7 +98,7 @@
 
     .feedback-form__fieldset-title {
       text-align: left;
-      padding-bottom: 60px;
+      padding-bottom: 40px;
     }
   }
 
@@ -110,7 +107,7 @@
 
     .feedback-form__fieldset-title {
       text-align: left;
-      padding-bottom: 60px;
+      padding-bottom: 40px;
     }
   }
 
