--- a/source/sass/blocks/site-nav.scss
+++ b/source/sass/blocks/site-nav.scss
@@ -22,7 +22,7 @@
     border-bottom: none;
   }
 
-  & a {
+  a {
     display: block;
     padding: 8px $section-side-padding;
     //overflow: hidden;
@@ -30,7 +30,7 @@
 
     font-size: 18px;
     font-weight: bold;
-    line-height: 2.22;
+    line-height: 40px;
     color: $white;
     text-decoration: none;
   }
