--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -4,6 +4,7 @@
 @import "./fonts";
 @import "./global";
 // БЭМ Блоки
+@import "./blocks/container";
 @import "./blocks/advantage";
 @import "./blocks/advantage-with-photo";
 @import "./blocks/advantage-list";
