--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -25,8 +25,8 @@
 @import "./blocks/small-city-benefits";
 @import "./blocks/social-links";
 @import "./blocks/text-input";
-@import "./blocks/radio-input";
 @import "./blocks/radio-input-list";
 @import "./blocks/checkbox-input";
 @import "./blocks/checkbox-input-list";
 @import "./blocks/visually-hidden";
+@import "./blocks/like-counter";
