--- a/source/sass/blocks/gallery.scss
+++ b/source/sass/blocks/gallery.scss
@@ -51,6 +51,7 @@
     line-height: 24px;
     max-width: 440px;
     margin: 28px auto 69px;
+    padding: 0;
   }
 
   .gallery__list {
@@ -65,6 +66,7 @@
     background-color: #f2f2f2;
     padding: 0;
     border: none;
+    flex-grow: 1;
 
     &:nth-child(2n+3) {
       background-color: #eaeaea;
