--- a/source/sass/blocks/index-page-intro.scss
+++ b/source/sass/blocks/index-page-intro.scss
@@ -12,6 +12,7 @@
   line-height: 1.44;
   color: #000000;
   margin-top: 0;
+  padding: 0 5px; // для pixel perfect
 }
 
 .index-page-intro__desc {
@@ -34,6 +35,7 @@
     max-width: 450px;
     margin-left: auto;
     margin-right: auto;
+    padding: 0;
   }
 
   .index-page-intro__desc {
