--- a/source/sass/blocks/site-nav.scss
+++ b/source/sass/blocks/site-nav.scss
@@ -13,26 +13,41 @@
 .site-nav__item {
   // TODO тени скопированные из zeplin выглядят явно не так как в макете
   box-shadow: 0 1px 0 0 rgba(1, 1, 1, 0.2), inset 0 1px 0 0 rgba(255, 255, 255, 0.2);
-  border-bottom: solid 1px gray; // TODO заменить цвет на правильный
   background-color: $light-grey-blue;
-
   text-align: center;
-
-  &:last-of-type {
-    border-bottom: none;
-  }
+  color: $white;
 
   a {
-    display: block;
-    padding: 8px $section-side-padding;
-    //overflow: hidden;
-    margin: 0 20px;
+    padding-right: $section-side-padding;
+    padding-left: $section-side-padding;
+    align-items: center;
+    justify-content: center;
+    min-height: 56px;
+    display: flex;
 
     font-size: 18px;
     font-weight: bold;
     line-height: 40px;
-    color: $white;
+    color: inherit;
     text-decoration: none;
+    border-bottom: solid 1px gray; // TODO заменить цвет на правильный
+  }
+
+  &:first-of-type {
+    a {
+      // оставляем место под кнопку закрытия меню
+      padding-right: 60px;
+      padding-left: 60px;
+    }
+  }
+
+  &:hover {
+    background-color: #669ec0;
+  }
+
+  &:active {
+    background-color: #5496bd;
+    color: $white-30;
   }
 }
 
@@ -43,30 +58,79 @@
   transform: translate(-50%, 100%);
   bottom: 0;
   box-shadow: none;
-  border: none;
 
   a {
-    height: 56px;
-    color: white;
-    text-align: center;
-    position: relative;
-    padding: 0;
+    border: none;
   }
 }
 
 .site-nav__toggler {
-  width: 23px;
-  height: 21px;
-  background-color: $light-grey-blue;
+  width: 60px;
+  height: 55px;
+  background-color: transparent;
   position: absolute;
-  right: 20px;
-  bottom: 16px;
-
+  right: 0;
+  top: 0;
+  padding: 0;
   font-size: 0;
   border: none;
+  outline: none;
+  display: flex;
 
   .site-nav--nojs & {
     display: none;
+  }
+}
+
+.site-nav__toggler-inner {
+  margin: auto;
+  width: 23px;
+  height: 21px;
+  position: relative;
+}
+
+.site-nav__toggler-line {
+  display: block;
+  position: absolute;
+  left: 0;
+  background-color: white;
+  transition: all 0.5s;
+  width: 0;
+
+  &:nth-of-type(1) {
+    top: 10px;
+    transform: rotate(45deg);
+    width: 29px;
+    height: 5px;
+    left: -3px;
+  }
+
+  &:nth-of-type(3) {
+    top: 10px;
+    transform: rotate(-45deg);
+    width: 29px;
+    height: 5px;
+    left: -3px;
+  }
+}
+
+.site-nav--closed .site-nav__toggler-line {
+  background-color: #81b3d2;
+  transform: rotate(0deg);
+  width: 22px;
+  height: 4px;
+  left: 0;
+
+  &:nth-of-type(1) {
+    top: 0;
+  }
+
+  &:nth-of-type(2) {
+    top: 9px;
+  }
+
+  &:nth-of-type(3) {
+    top: 18px;
   }
 }
 
@@ -96,15 +160,36 @@
     width: 153px;
     background: none;
     box-shadow: none;
-    border: none;
+    color: #000000;
 
     a {
-      color: #000000;
       font-size: 14px;
       font-weight: bold;
       line-height: 26px;
-      padding: 14px 0;
-      margin: 0 10px; // TODO чтобы были пробелы между элементами меню
+      padding: 6px 0;
+      border: none;
+    }
+
+    &:hover {
+      background-color: transparent;
+      color: #81b3d2;
+    }
+
+    &:active {
+      background-color: transparent;
+      color: rgba(0, 0, 0, 0.3);
+    }
+
+    &--active {
+      color: #766357;
+
+      &:hover {
+        color: #604e43;
+      }
+
+      &:active {
+        color: rgba(118, 99, 87, 0.3);
+      }
     }
   }
 
@@ -115,6 +200,11 @@
 
     a {
       padding: 0;
+      position: absolute;
+      top: 0;
+      left: 50%;
+      transform: translateX(-50%);
+      margin: 0;
     }
   }
 
