--- a/source/sass/global.scss
+++ b/source/sass/global.scss
@@ -16,4 +16,32 @@ body {
   .mobile-hidden {
     display: none;
   }
+
+  .only-tablet {
+    display: none;
+  }
+
+  .only-desktop {
+    display: none;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1199px) {
+  .only-desktop {
+    display: none;
+  }
+
+  .only-mobile {
+    display: none;
+  }
+}
+
+@media (min-width: 1200px) {
+  .only-mobile {
+    display: none;
+  }
+
+  .only-tablet {
+    display: none;
+  }
 }
