--- a/source/sass/blocks/promo-video.scss
+++ b/source/sass/blocks/promo-video.scss
@@ -25,8 +25,6 @@
 }
 
 .promo-video__player {
-  background-color: gray; // TODO tmp
-  height: 267px;
   margin-top: 35px;
 }
 
@@ -52,7 +50,6 @@
     margin-top: 73px;
     margin-left: 60px;
     margin-right: 60px;
-    height: 500px;
   }
 }
 
@@ -67,5 +64,8 @@
 
   .promo-video__player {
     margin-top: 72px;
+    max-width: 800px;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
