--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -18,6 +18,7 @@
 @import "./blocks/page-footer";
 @import "./blocks/post";
 @import "./blocks/promo-video";
+@import "./blocks/player";
 @import "./blocks/sedona-map";
 @import "./blocks/site-banner-big";
 @import "./blocks/site-banner-small";
