--- a/source/sass/blocks/visually-hidden.scss
+++ b/source/sass/blocks/visually-hidden.scss
@@ -1,5 +1,5 @@
 // https://allyjs.io/tutorials/hiding-elements.html
-.visually-hidden:not(:focus):not(:active) {
+.visually-hidden {
   position: absolute;
 
   width: 1px;
