--- a/source/sass/blocks/container.scss
+++ b/source/sass/blocks/container.scss
@@ -2,6 +2,8 @@
   min-width: 320px;
   max-width: 450px;
   margin: 0 auto;
+  box-shadow: 0 5px 15px 0 rgba(0, 1, 1, 0.2);
+  background-color: white;
 }
 
 @media (min-width: 768px) {
