--- a/source/sass/blocks/gallery.scss
+++ b/source/sass/blocks/gallery.scss
@@ -39,6 +39,7 @@
 @media (min-width: 768px) {
   .gallery {
     padding-top: 53px;
+    border: none;
   }
 
   .gallery__title {
@@ -50,7 +51,7 @@
     font-size: 14px;
     line-height: 24px;
     max-width: 440px;
-    margin: 28px auto 69px;
+    margin: 29px auto 69px;
     padding: 0;
   }
 
@@ -66,7 +67,6 @@
     background-color: #f2f2f2;
     padding: 0;
     border: none;
-    flex-grow: 1;
 
     &:nth-child(2n+3) {
       background-color: #eaeaea;
@@ -84,7 +84,7 @@
   }
 
   .gallery__desc {
-    margin-bottom: 72px;
+    margin-bottom: 71px;
   }
 
   .gallery__list {
@@ -94,6 +94,7 @@
 
   .gallery__item {
     width: 33.3%;
+    flex-grow: 1;
 
     &:first-of-type {
       width: 100%;
