--- a/source/sass/blocks/post.scss
+++ b/source/sass/blocks/post.scss
@@ -6,6 +6,7 @@
 }
 
 .post__img-wrapper {
+  display: block;
   background-color: red; // TODO tmp
   position: relative;
   overflow: hidden;
@@ -13,7 +14,7 @@
 }
 
 .post__img {
-  position: absolute;
+  @include content-image-align;
 }
 
 .post__footer {
@@ -64,6 +65,10 @@
     flex-shrink: 0;
     padding: 15px 20px 10px 20px;
     position: relative;
+  }
+
+  .post__author {
+    margin-top: 1px;
   }
 
   .post__likes {
