--- a/source/sass/blocks/site-banner-big.scss
+++ b/source/sass/blocks/site-banner-big.scss
@@ -1,11 +1,42 @@
 .site-banner-big {
   height: 389px;
-  background-image: url("../img/bg-back-mobile@1x.jpg");
+  background-image: url("/img/bg-intro-triangle-mobile.svg"), url("/img/bg-back-mobile@1x.jpg");
+  background-position: center bottom;
+  background-size: 768px auto, 768px 389px;
+  background-repeat: no-repeat;
   overflow: hidden;
+
+  @media (min-resolution: 1.5dppx) {
+    background-image: url("/img/bg-intro-triangle-mobile.svg"), url("/img/bg-back-mobile@2x.jpg");
+  }
+
+  @media (min-width: 768px) {
+    height: 518px;
+    background-image: url("/img/bg-intro-triangle-tablet.svg"), url("/img/bg-back-tablet@1x.jpg");
+    background-size: 768px auto, 768px 518px;
+  }
+
+  @media (min-width: 768px) and (min-resolution: 1.5dppx) {
+    background-image: url("/img/bg-intro-triangle-tablet.svg"), url("/img/bg-back-tablet@2x.jpg");
+  }
+
+  @media (min-width: 1200px) {
+    background-image: url("/img/bg-intro-triangle-desktop.svg"), url("/img/bg-back-desktop@1x.jpg");
+    background-size: 1200px auto, 1200px 518px;
+  }
+
+  @media (min-width: 1200px) and (min-resolution: 1.5dppx) {
+    background-image: url("/img/bg-intro-triangle-desktop.svg"), url("/img/bg-back-desktop@2x.jpg");
+  }
 }
 
-@media (min-width: 768px) {
-  .site-banner-big {
-    height: 518px;
+.site-banner-big__content {
+  width: 281px;
+  margin: 89px auto 0 auto;
+  display: block;
+
+  @media (min-width: 768px) {
+    width: 460px;
+    margin-top: 77px;
   }
 }
