--- a/source/sass/global.scss
+++ b/source/sass/global.scss
@@ -3,6 +3,7 @@ body {
   min-width: 320px;
   // почти весь текст на сайте отображается как "uppercase"
   text-transform: uppercase;
+  background-color: #f2f2f2;
 }
 
 // дефолтный box-sizing: border-box слишком удобный, невозможно отказаться
@@ -42,6 +43,10 @@ body {
   }
 
   .only-tablet {
+    display: none;
+  }
+
+  .desktop-hidden {
     display: none;
   }
 }
