--- a/source/sass/blocks/decorative-triangle.scss
+++ b/source/sass/blocks/decorative-triangle.scss
@@ -1,5 +1,5 @@
 .decorative-triangle {
-  background-image: url("/img/bg-triangle.svg");
+  background-image: url("../img/bg-triangle.svg");
   background-repeat: no-repeat;
   background-position: center bottom;
   background-color: #81b3d2;
