--- a/source/sass/blocks/like-counter.scss
+++ b/source/sass/blocks/like-counter.scss
@@ -6,7 +6,7 @@
   opacity: 0.3;
   font-size: 0;
   border: none;
-  background-image: url("/img/icon-like--black.svg");
+  background-image: url("./img/icon-like--black.svg");
   background-repeat: no-repeat;
   background-size: contain;
   background-color: transparent;
@@ -35,7 +35,7 @@
 
 @media (min-width: 1200px) {
   .like-counter__button {
-    background-image: url("/img/icon-like--white.svg");
+    background-image: url("../img/icon-like--white.svg");
     opacity: 1;
   }
 
