--- a/source/sass/blocks/switch-input.scss
+++ b/source/sass/blocks/switch-input.scss
@@ -53,7 +53,7 @@
     top: 20px;
     left: 16px;
     color: #333333;
-    background-image: url("/img/icon-tick.svg");
+    background-image: url("../img/icon-tick.svg");
     background-position: center;
     background-size: contain;
     background-repeat: no-repeat;
